Fix x-overflow appearing

--- a/client/src/pages/app/style.scss
+++ b/client/src/pages/app/style.scss
@@ -4,7 +4,6 @@
     display: grid;
     grid-gap: 50px;
     padding: 50px;
-    width: 100vw;
     height: 100vh;
     box-sizing: border-box;
     grid-template-columns: 45% 1fr;
