--- a/client/src/pages/auth/style.scss
+++ b/client/src/pages/auth/style.scss
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
     height: 100vh;
     background: url('../../assets/login-background.svg') no-repeat;
     background-position: 15vw 7vh;
