--- a/client/src/pages/landpage/style.scss
+++ b/client/src/pages/landpage/style.scss
@@ -3,7 +3,6 @@
 .hero {
     display: flex;
     flex-direction: column;
-    width: 100vw;
     height: 100vh;
     padding: 100px 50px;
     background: transparent linear-gradient(96deg, #ffffff 0%, #efefef 80%, #ffffff 100%) 0% 0% no-repeat padding-box;
